--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "binarta.basket.angular":"v0.*.*",
     "binarta.purchase.orders.angular":"v1.*.*",
     "binarta.customer.address":"v0.*.*",
-    "binarta.customer.profile.angular": "v0.*.*"
+    "binarta.customer.profile.angular": "v0.*.*",
+    "binarta.checkpoint.recaptcha.angular": "v0.*.*",
+    "angular-recaptcha": "v0.0.7"
   },
   "ignore": [
     "**/.*",
