Added truncate module dependency

--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "binarta.customer.address":"v0.*.*",
     "binarta.customer.profile.angular": "v0.*.*",
     "binarta.checkpoint.recaptcha.angular": "v0.*.*",
-    "angular-recaptcha": "v0.0.7"
+    "angular-recaptcha": "v0.0.7",
+    "angular-truncate": "*"
   },
   "ignore": [
     "**/.*",
