--- a/bower.json
+++ b/bower.json
@@ -15,12 +15,17 @@
     "angular-cookies": "1.3.*",
     "angular-touch": "1.3.*",
     "angular-animate": "1.3.*",
-    "binarta.basket.angular":"v0.*.*",
-    "binarta.purchase.orders.angular":"v1.*.*",
-    "binarta.customer.address":"v0.*.*",
+    "binarta.basket.angular": "v0.*.*",
+    "binarta.purchase.orders.angular": "v1.*.*",
+    "binarta.customer.address": "v0.*.*",
     "binarta.customer.profile.angular": "v0.*.*",
     "binarta.checkpoint.recaptcha.angular": "v0.*.*",
     "angular-recaptcha": "v0.0.7"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.3.*",
+    "thinkerit.angularx.bootstrap.mocks": "v0.*.*",
+    "thk-config-mock": "0.*.*"
   },
   "ignore": [
     "**/.*",
@@ -28,5 +33,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "resolutions": {
+    "angular": "1.3.*"
+  }
 }
