--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-angular-templatecache": "^1.5.0",
-    "gulp-minify-html": "^0.1.8"
+    "gulp-minify-html": "^0.1.8",
+    "gulp-template": "^3.0.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.15",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "phantomjs": "^1.9.19"
   }
 }
