--- a/bower.json
+++ b/bower.json
@@ -8,24 +8,12 @@
     "./sources.json"
   ],
   "dependencies": {
-    "angular": "1.3.*",
-    "angular-route": "1.3.*",
-    "angular-sanitize": "1.3.*",
-    "angular-resource": "1.3.*",
-    "angular-cookies": "1.3.*",
-    "angular-touch": "1.3.*",
-    "angular-animate": "1.3.*",
+    "binarta.professional.app.angular": "0.*.*",
     "binarta.basket.angular": "v0.*.*",
     "binarta.purchase.orders.angular": "v1.*.*",
     "binarta.customer.address": "v0.*.*",
     "binarta.customer.profile.angular": "v0.*.*",
-    "binarta.checkpoint.recaptcha.angular": "v0.*.*",
-    "angular-recaptcha": "v0.0.7"
-  },
-  "devDependencies": {
-    "angular-mocks": "1.3.*",
-    "thinkerit.angularx.bootstrap.mocks": "v0.*.*",
-    "thk-config-mock": "0.*.*"
+    "binarta.checkpoint.recaptcha.angular": "v0.*.*"
   },
   "ignore": [
     "**/.*",
@@ -33,8 +21,5 @@
     "bower_components",
     "test",
     "tests"
-  ],
-  "resolutions": {
-    "angular": "1.3.*"
-  }
+  ]
 }
